Fixing alignment of text and satellite

--- a/PsycheProj/main.css
+++ b/PsycheProj/main.css
@@ -67,6 +67,7 @@ body {
 
   #narrative{
     display:none;
+    padding-right: 80px;
   }
 
   #fact-one{
